fix: Update Order 파라미터 타입 수정